@@ -4,7 +4,9 @@ Changelog
 1.3.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Make sure that string attributes of a PloneFlare are always utf-8 encoded
+  byte strings to be consistent with catalog brains.
+  [buchi]
 
 
 1.3 (2013-12-19)
